[tool.poetry]
name = "linkedin_url_extracter"
version = "0.1.0"
description = ""
authors = ["Terje Espedal <terje.m.espedal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2021.8.28"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
